bad/incr_field_class_mcall.example_compiler_output
ERROR
[1mbad/incr_field_class_mcall.lat:12:19: [1;31merror: [0;1m++ operator is valid only for integer values not `Y`[m
	(new M).foo().fld++;
	                 [1;32m^[m
